# empdens

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: tox.yml
empdens/: __init__.py  base.py  cade.py  data.py  names.py  tree.py
empdens/classifiers/: __init__.py  base.py  lightgbm.py  xgboost.py
empdens/evaluation/: __init__.py  binary.py  evaluate.py
empdens/models/: __init__.py  joint.py  multinomial.py  piecewise_uniform.py
empdens/resources/data/: japanese_vowels.csv
empdens/simulators/: __init__.py  bivariate.py  univariate.py
empdens/tree/: __init__.py  tree.py
empdens/utils/: pandahandler.py
empdens/wrappers/: __init__.py  fastKDE.py  fast_kde.py  sklearn_isolation_forest.py  sklearn_kde.py
notebooks/: census_demographics.ipynb  demo.ipynb  speed_benchmarks.ipynb  vowels.ipynb
tests/: test_cade.py  test_demo.py  test_fastkde.py  test_import.py  test_simulators.py
tests/core/: test_cade.py  test_data.py  test_simulators.py
tests/core/utils/: test_pandahandler.py
